--- a/pull data from api with javascript/2 Javascript İle JSON Harici Veri Çekme/index.html
+++ b/pull data from api with javascript/2 Javascript İle JSON Harici Veri Çekme/index.html
@@ -5,9 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        #album{
+            display: flex;
+            flex-wrap: wrap;
+            width: 100%;
+        }
+        img{
+            height: 200px;
+            width: 200px;
+            margin-right: 10px;
+        }
+    </style>
 </head>
 <body>
-    <ul id="listele"></ul>
+    <div id="album"></div>
     <script src="hex.js"></script>
     
 </body>
