--- a/pull data from api with javascript/3 JSON Nedir ve JSON Metodları/index.html
+++ b/pull data from api with javascript/3 JSON Nedir ve JSON Metodları/index.html
@@ -7,9 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="kisiler">
-        
-    </div>
+    <ul class="kisiler"></ul>
 
     <script src="hex.js"></script>
 </body>
