--- a/pull data from api with javascript/5 Canlı Döviz Kuru Nasıl Çekilir/index.html
+++ b/pull data from api with javascript/5 Canlı Döviz Kuru Nasıl Çekilir/index.html
@@ -5,8 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.scss">
 </head>
 <body>
     
+    <div class="container">
+
+        <div class="row">
+           <div class="card">
+                <h1 id="dollar">##</h1>
+                <span>Dollar</span>
+            </div>
+
+            <div class="card">
+                <h1 id="euro">##</h1>
+                <span>Euro</span>
+            </div>
+
+            <div class="card">
+                <h1 id="sterlin">##</h1>
+                <span>Sterlin</span>
+            </div> 
+        </div>
+        
+
+    </div>
+    <script src="hex.js"></script>
 </body>
 </html>
