--- a/pull data from api with javascript/7 Country Guide App/index.html
+++ b/pull data from api with javascript/7 Country Guide App/index.html
@@ -9,7 +9,15 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+
+    <div class="container">
+        <div class="search-wrapper">
+            <input type="text" id="country-inp" placeholder="Enter a country name here..."/>
+
+            <button id="search-btn">Search</button>
+        </div>
+        <div class="result"></div>
+    </div>
 
     <script src="hex.js"></script>
 </body>
