--- a/pull data from api with javascript/7 Country Guide App/index.html
+++ b/pull data from api with javascript/7 Country Guide App/index.html
@@ -1,24 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Country Guide App</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap" rel="stylesheet">
-</head>
-<body>
 
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Country Guide App</title>
+    <!--Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap" rel="stylesheet" />
+    <!-- Stylesheet -->
+    <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
     <div class="container">
         <div class="search-wrapper">
-            <input type="text" id="country-inp" placeholder="Enter a country name here..."/>
-
+            <input type="text" id="country-inp" placeholder="Enter a country name here..." />
             <button id="search-btn">Search</button>
         </div>
-        <div class="result"></div>
+        <div id="result"></div>
     </div>
-
+    <!-- Script -->
     <script src="hex.js"></script>
 </body>
+
 </html>
