--- a/pull data from api with javascript/8 Country API Project using Javascript/index.html
+++ b/pull data from api with javascript/8 Country API Project using Javascript/index.html
@@ -1,28 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Random Joke Generator</title>
+    <!--Google Font-->
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;600&display=swap" rel="stylesheet">
+    <!-- Stylesheet -->
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <div id="container" class="inactive">
-        <input type="text" id="countryInput" class="active" placeholder="Enter a country name....">
-        <span></span>
-        <img src="flag" class="inactive">
-        <ul id="info" class="inactive">
-            <li id="officialName">Official Name</li>
-            <li id="capital">Capital</li>
-            <li id="population">Population</li>
-            <li id="continent">Continent</li>
-            <li id="currency">Currency</li>
-        </ul>
-        <button id="searchButton" class="active">Search</button>
+    <div class="wrapper">
+        <span>&#128514;</span>
+        <p id="joke">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quidem sed rerum et est ipsam inventore esse impedit soluta distinctio amet! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi, eligendi.
+        </p>
+        <button id="btn">Get Random Joke</button>
     </div>
-
-
-    <script src="hex.js"></script>
+    <!-- Script -->
+    <script src="script.js"></script>
 </body>
+
 </html>
