--- a/pull data from api with javascript/8 JavaScript Projeleri-API İsteği (Breaking Bad API)/index.html
+++ b/pull data from api with javascript/8 JavaScript Projeleri-API İsteği (Breaking Bad API)/index.html
@@ -10,6 +10,7 @@
 <body>
     
     <p id="pTag" class="breaking-bad"></p>
+    <button id="btn">Tıkla</button>
     <script src="hex.js"></script>
 </body>
 </html>
